--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,22 @@
+.landing {
+	display: flex;
+	justify-content: space-around;
+}
+
 .distortion {
-	width: 640px;
-	height: 920px;
+	width: 400px;
+	height: 575px;
+	align-self: flex-end;
+}
+
+.intro {
+	align-self: center;
+}
+
+.intro h2 {
+	font-size: 50px;
+}
+
+.intro p {
+	font-size: 25px;
 }
